@@ -29,7 +29,7 @@ AM_GCONF_SOURCE_2
 AC_DEFINE_UNQUOTED(GNOME_ICONDIR, "${prefix}/share/pixmaps")
 
 dnl Add the languages which your application supports here.
-ALL_LINGUAS="da de es fr gl it ko ja lv ms no pl pt pt_BR ru sk sl sv tr uk zh_CN zh_TW"
+ALL_LINGUAS="az da de es fr gl it ja ko lv ms nl no pl pt pt_BR ru sk sl sv tr uk vi zh_CN zh_TW"
 
 GETTEXT_PACKAGE=gnome-system-monitor
 AC_SUBST(GETTEXT_PACKAGE)
