@@ -1,3 +1,9 @@
+2002-05-15  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* vi.po: Added Vietnamese file
+	* az.po,lv.po: Completed header
+	* nl.po,es.po,ru.po: fixed syntax errors
+
 2002-05-11  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
 
 	* sk.po: Updated Slovak translation.
