@@ -1,3 +1,10 @@
+2002-05-15  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* configure.in: Added Vietnamese (vi), Azeri (az) and Dutch (nl)
+	to ALL_LINGUAS
+	* src/proctable.c,src.interface.c: Added no-c-format tags to make
+	xgettext happy
+
 2002-05-14  Anders Carlsson  <andersca@gnu.org>
 
 	* configure.in:
